Fix toggle to night mode layout visibility

--- a/src/css/delegate.css
+++ b/src/css/delegate.css
@@ -21,3 +21,9 @@
     outline: inherit !important;
     margin-right:1em;
 }
+
+.theme-dark #delegateButton{
+color:white;
+border-color: white;
+
+}
